// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`look.__box 1`] = `
"__box 1 u
012
3 4
567"
`;

exports[`look.__box 2`] = `
"__box 2 u
01234
5   6
7   8
9   a
bcdef"
`;

exports[`look.__box 3`] = `
"__box 3 u
0123456
7     8
9     a
b     c
d     e
f     g
hijklmn"
`;

exports[`look.__box 4`] = `
"__box 4 u
012345678
9       a
b       c
d       e
f       g
h       i
j       k
l       m
nopqrstuv"
`;

exports[`look.__box 5`] = `
"__box 1 l
247
1 6
035"
`;

exports[`look.__box 6`] = `
"__box 2 l
468af
3   e
2   d
1   c
0579b"
`;

exports[`look.__box 7`] = `
"__box 3 l
68acegn
5     m
4     l
3     k
2     j
1     i
079bdfh"
`;

exports[`look.__box 8`] = `
"__box 4 l
8acegikmv
7       u
6       t
5       s
4       r
3       q
2       p
1       o
09bdfhjln"
`;

exports[`look.__box 9`] = `
"__box 1 r
530
6 1
742"
`;

exports[`look.__box 10`] = `
"__box 2 r
b9750
c   1
d   2
e   3
fa864"
`;

exports[`look.__box 11`] = `
"__box 3 r
hfdb970
i     1
j     2
k     3
l     4
m     5
ngeca86"
`;

exports[`look.__box 12`] = `
"__box 4 r
nljhfdb90
o       1
p       2
q       3
r       4
s       5
t       6
u       7
vmkigeca8"
`;

exports[`look.__circle 1`] = `
"__circle 1 u
 0 
2 1
 3 "
`;

exports[`look.__circle 2`] = `
"__circle 2 u
  0  
 2 1 
4   3
 6 5 
  7  "
`;

exports[`look.__circle 3`] = `
"__circle 3 u
   0   
  2 1  
 4   3 
6     5
 a   9 
  8 7  
   b   "
`;

exports[`look.__circle 4`] = `
"__circle 4 u
    0    
   2 1   
  4   3  
 6     5 
8       7
 e     d 
  c   b  
   a 9   
    f    "
`;

exports[`look.__circle 5`] = `
"__circle 1 l
 1 
0 3
 2 "
`;

exports[`look.__circle 6`] = `
"__circle 2 l
  3  
 1 5 
0   7
 2 6 
  4  "
`;

exports[`look.__circle 7`] = `
"__circle 3 l
   5   
  3 9  
 1   7 
0     b
 2   8 
  4 a  
   6   "
`;

exports[`look.__circle 8`] = `
"__circle 4 l
    7    
   5 d   
  3   b  
 1     9 
0       f
 2     a 
  4   c  
   6 e   
    8    "
`;

exports[`look.__circle 9`] = `
"__circle 1 r
 2 
3 0
 1 "
`;

exports[`look.__circle 10`] = `
"__circle 2 r
  4  
 6 2 
7   0
 5 1 
  3  "
`;

exports[`look.__circle 11`] = `
"__circle 3 r
   6   
  a 4  
 8   2 
b     0
 7   1 
  9 3  
   5   "
`;

exports[`look.__circle 12`] = `
"__circle 4 r
    8    
   e 6   
  c   4  
 a     2 
f       0
 9     1 
  b   3  
   d 5   
    7    "
`;

exports[`look.__cone 1`] = `
"__cone 1 u
 0 
   
   "
`;

exports[`look.__cone 2`] = `
"__cone 2 u
 102 
     
     
     
     "
`;

exports[`look.__cone 3`] = `
"__cone 3 u
 31024 
       
       
       
       
       
       "
`;

exports[`look.__cone 4`] = `
"__cone 4 u
 5310246 
         
         
         
         
         
         
         
         "
`;

exports[`look.__cone 5`] = `
"__cone 1 l
   
0  
   "
`;

exports[`look.__cone 6`] = `
"__cone 2 l
     
2    
0    
1    
     "
`;

exports[`look.__cone 7`] = `
"__cone 3 l
       
4      
2      
0      
1      
3      
       "
`;

exports[`look.__cone 8`] = `
"__cone 4 l
         
6        
4        
2        
0        
1        
3        
5        
         "
`;

exports[`look.__cone 9`] = `
"__cone 1 r
   
  0
   "
`;

exports[`look.__cone 10`] = `
"__cone 2 r
     
    1
    0
    2
     "
`;

exports[`look.__cone 11`] = `
"__cone 3 r
       
      3
      1
      0
      2
      4
       "
`;

exports[`look.__cone 12`] = `
"__cone 4 r
         
        5
        3
        1
        0
        2
        4
        6
         "
`;

exports[`look.__cross 1`] = `
"__cross 1 u
 0 
1 2
 3 "
`;

exports[`look.__cross 2`] = `
"__cross 2 u
  0  
     
1   2
     
  3  "
`;

exports[`look.__cross 3`] = `
"__cross 3 u
   0   
       
       
1     2
       
       
   3   "
`;

exports[`look.__cross 4`] = `
"__cross 4 u
    0    
         
         
         
1       2
         
         
         
    3    "
`;

exports[`look.__cross 5`] = `
"__cross 1 l
 2 
0 3
 1 "
`;

exports[`look.__cross 6`] = `
"__cross 2 l
  2  
     
0   3
     
  1  "
`;

exports[`look.__cross 7`] = `
"__cross 3 l
   2   
       
       
0     3
       
       
   1   "
`;

exports[`look.__cross 8`] = `
"__cross 4 l
    2    
         
         
         
0       3
         
         
         
    1    "
`;

exports[`look.__cross 9`] = `
"__cross 1 r
 1 
3 0
 2 "
`;

exports[`look.__cross 10`] = `
"__cross 2 r
  1  
     
3   0
     
  2  "
`;

exports[`look.__cross 11`] = `
"__cross 3 r
   1   
       
       
3     0
       
       
   2   "
`;

exports[`look.__cross 12`] = `
"__cross 4 r
    1    
         
         
         
3       0
         
         
         
    2    "
`;

exports[`look.__f 1`] = `
"__f 1 u
 0 
   
   "
`;

exports[`look.__f 2`] = `
"__f 2 u
  0  
     
     
     
     "
`;

exports[`look.__f 3`] = `
"__f 3 u
   0   
       
       
       
       
       
       "
`;

exports[`look.__f 4`] = `
"__f 4 u
    0    
         
         
         
         
         
         
         
         "
`;

exports[`look.__f 5`] = `
"__f 1 l
   
0  
   "
`;

exports[`look.__f 6`] = `
"__f 2 l
     
     
0    
     
     "
`;

exports[`look.__f 7`] = `
"__f 3 l
       
       
       
0      
       
       
       "
`;

exports[`look.__f 8`] = `
"__f 4 l
         
         
         
         
0        
         
         
         
         "
`;

exports[`look.__f 9`] = `
"__f 1 r
   
  0
   "
`;

exports[`look.__f 10`] = `
"__f 2 r
     
     
    0
     
     "
`;

exports[`look.__f 11`] = `
"__f 3 r
       
       
       
      0
       
       
       "
`;

exports[`look.__f 12`] = `
"__f 4 r
         
         
         
         
        0
         
         
         
         "
`;

exports[`look.__lr 1`] = `
"__lr 1 u
   
0 1
   "
`;

exports[`look.__lr 2`] = `
"__lr 2 u
     
     
0   1
     
     "
`;

exports[`look.__lr 3`] = `
"__lr 3 u
       
       
       
0     1
       
       
       "
`;

exports[`look.__lr 4`] = `
"__lr 4 u
         
         
         
         
0       1
         
         
         
         "
`;

exports[`look.__lr 5`] = `
"__lr 1 l
 1 
   
 0 "
`;

exports[`look.__lr 6`] = `
"__lr 2 l
  1  
     
     
     
  0  "
`;

exports[`look.__lr 7`] = `
"__lr 3 l
   1   
       
       
       
       
       
   0   "
`;

exports[`look.__lr 8`] = `
"__lr 4 l
    1    
         
         
         
         
         
         
         
    0    "
`;

exports[`look.__lr 9`] = `
"__lr 1 r
 0 
   
 1 "
`;

exports[`look.__lr 10`] = `
"__lr 2 r
  0  
     
     
     
  1  "
`;

exports[`look.__lr 11`] = `
"__lr 3 r
   0   
       
       
       
       
       
   1   "
`;

exports[`look.__lr 12`] = `
"__lr 4 r
    0    
         
         
         
         
         
         
         
    1    "
`;

exports[`look.__three 1`] = `
"__three 1 u
102
   
   "
`;

exports[`look.__three 2`] = `
"__three 2 u
 102 
     
     
     
     "
`;

exports[`look.__three 3`] = `
"__three 3 u
  102  
       
       
       
       
       
       "
`;

exports[`look.__three 4`] = `
"__three 4 u
   102   
         
         
         
         
         
         
         
         "
`;

exports[`look.__three 5`] = `
"__three 1 l
2  
0  
1  "
`;

exports[`look.__three 6`] = `
"__three 2 l
     
2    
0    
1    
     "
`;

exports[`look.__three 7`] = `
"__three 3 l
       
       
2      
0      
1      
       
       "
`;

exports[`look.__three 8`] = `
"__three 4 l
         
         
         
2        
0        
1        
         
         
         "
`;

exports[`look.__three 9`] = `
"__three 1 r
  1
  0
  2"
`;

exports[`look.__three 10`] = `
"__three 2 r
     
    1
    0
    2
     "
`;

exports[`look.__three 11`] = `
"__three 3 r
       
       
      1
      0
      2
       
       "
`;

exports[`look.__three 12`] = `
"__three 4 r
         
         
         
        1
        0
        2
         
         
         "
`;

exports[`xy2index 1`] = `
"     
 6   
  1  
 4 3 
5   2"
`;
